src/test/resources/public/input/typechecking/fail/this/fail01.jova
class Helper {
}

class A {

    private int func0(int a, string b, bool c, Helper d,
                     int e, string f, bool g, Helper h) {
        this.a = 3;
        this.b = "b";
        this.c = true;
        this.d = new Helper;
        this.e = 4;
        this.f = "f";
        this.g = false;
        this.h = new Helper;

        return 0;
    }

    private int func1(int a, string b, bool c, Helper d,
                     int e, string f, bool g, Helper h) {
        this.a = a;
        this.b = b;
        this.c = c;
        this.d = d;
        this.e = e;
        this.f = f;
        this.g = g;
        this.h = h;

        return 0;
    }

    private int func2(int a, string b, bool c, Helper d,
                     int e, string f, bool g, Helper h) {
        a = this.a;
        b = this.b;
        c = this.c;
        d = this.d;
        e = this.e;
        f = this.f;
        g = this.g;
        h = this.h;

        return 0;
    }

}